# minisat2_rs

./: Cargo.toml  README.md  ph8.cnf
cnf_examples/: ph9.cnf  php99_sat.cnf  rain.cnf  sat_hard.cnf
src/: lib.rs  main.rs
src/functions/: analyse.rs  analyse_final.rs  enqueue.rs  new_clause.rs  propagate.rs  reduce_db.rs  search.rs  simplify_db.rs  solve.rs
src/models/: clause.rs  solverstate.rs  statsparams.rs
